Renames the user settings css file

--- a/js/templates/user.html
+++ b/js/templates/user.html
@@ -1,5 +1,5 @@
 <div class="user">
-    <div class="personnalInfo">
+    <div class="personnal-info">
         <div class="user-thumbnail">
             <img class="gravatar-photo" data-email="{{email}}" src=""/>
         </div>
