--- a/css/user-settings.css
+++ b/css/user-settings.css
@@ -1,4 +1,4 @@
-.user{
+.user {
     margin-left: auto;
     margin-right: auto;
     width: 25%;
@@ -7,7 +7,7 @@
 
 }
 
-.userInfo{
+.user-info {
 
 }
 
