minor improvement on login page, the redirect link was off

--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -552,7 +552,7 @@
         z-index: 1;
     }
 
-<<<<<<< HEAD
+
     .navigation-bar-disconnect {
         background-color: transparent;
     }
@@ -562,8 +562,6 @@
         margin: 8em 4em 4em 23em;
         /* padding: 0em 0em 0em 0em; */
     }
-
-=======
 
     .member-hamburger {
 
@@ -588,7 +586,6 @@
     }
 
 
->>>>>>> master
     /* ------ Left side nav-bar ------ */
     .umovie-logo {
         background: none;
@@ -697,6 +694,17 @@
 /* ------  Pour desktop exclusivement ------  */
 
 @media (min-width: 960px) {
+
+
+    .umovie-logo-disconnect #site-logo {
+        width: 6.5em;
+        margin: 4em 0em 0em 1em;
+        padding-top: 1em;
+    }
+
+    .search-bar {
+        padding: 1em 1em 0.5em;
+    }
 
     .member-menu {
         z-index: 1000;
