--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -16,9 +16,10 @@
             </div>
             <div class="switch-authentication">
                 {{#if newEntry}}
-                <span>Already have an account?  </span><a href="#login"  class="auth-swap">Log-in here!</a>
+                <span>Already have an account?  </span>
+                <a href="#login" class="auth-swap"><p>Log-in here!</p></a>
                 {{else}}
-                <span>You're new?  </span><a href="#signup" class="auth-swap">Register here!</a>
+                <span>You're new?  </span><a href="#signup" class="auth-swap"><p>Register here!</p></a>
                 {{/if}}
             </div>
         </div>
