--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -16,10 +16,11 @@
             </div>
             <div class="switch-authentication">
                 {{#if newEntry}}
-                <span>Already have an account?  </span>
-                <a href="#login" class="auth-swap"><p>Log-in here!</p></a>
+                <span>Already have an account?
+                </span><a href="#login" class="auth-swap">Log-in here!</a>
                 {{else}}
-                <span>You're new?  </span><a href="#signup" class="auth-swap"><p>Register here!</p></a>
+                <span>You're new?
+                </span><a href="#signup" class="auth-swap">Register here!</a>
                 {{/if}}
             </div>
         </div>
@@ -28,5 +29,4 @@
         <h1>Hello, welcome to UMovie.</h1>
         <h2>Get all the movies, TV shows and celebrities content in one place!</h2>
     </div>
-
 </div>
