the icons are working

--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -40,7 +40,7 @@
         <div class="search-container">
             <div class="search-scope-icons">
                 {{#each scopeIcon}}
-                <div class="scope-icon" scopes="{{name}}" id="scope-{{name}}-icon" style="background-image: url({{url}});"></div>
+                <div class="scope-icon {{preselect}}" scopes="{{name}}" id="scope-{{name}}-icon" style="background-image: url({{url}});"></div>
                 {{/each}}
             </div>
             <div class="input-bar">
