--- a/js/templates/thumbnail.html
+++ b/js/templates/thumbnail.html
@@ -5,7 +5,7 @@
         <h2 class="thumbnailNomArtist">
             <a class="actor-box" href="#actor/{{artistId}}">{{artistName}}</a>
         </h2>
-        <div class="genreActorThumbnail"> Genre : {{primaryGenreName}}</div>
+        <div class="genreActorThumbnail"> <span class="genre-display">Genre :<span> {{primaryGenreName}}</div>
         <div id="{{bioId}}" class="shortBio">{{shortenBio}}</div>
     </div>
 </div>
