Update the teamMember template

--- a/js/templates/teamMembers.html
+++ b/js/templates/teamMembers.html
@@ -2,23 +2,22 @@
     <div class="developers-title">Meet the team</div>
     <div class="developers-box">
         <div class="developer-box">
-            <img src="url(../../img/luis.jpg">
-            <span>Luis Obando</span>
-            <span>The UX Master</span>
-            <span>"<span class="title-border">Css is aweso</span>me!"</span>
+            <img src={{photoLink}}>
+            <span>{{name}}</span>
+            <span>{{nickname}}</span>
+            <span>{{quote}}</span>
             <div class="developer-links">
-                        <span>
-                             <a href="https://www.facebook.com/luiseduardo.obandocarbajal?fref=ts">
-                                 <img src="url(../../img/facebook-link.jpg">
-                             </a>
-                        </span>
-                        <span>
-                            <a href="https://github.com/luiseduardo1">
-                                <img src="url(../../img/github-link.jpg">
-                            </a>
-                        </span>
+                <span>
+                    <a href={{facebookLink}}>
+                        <img src="url(../../img/facebook-link.jpg">
+                    </a>
+                </span>
+                <span>
+                    <a href={{githubLink}}>
+                        <img src="url(../../img/github-link.jpg">
+                    </a>
+                </span>
             </div>
         </div>
-
     </div>
 </div>
