added error message for login

--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -10,6 +10,7 @@
             </div>
             {{/each}}
         </div>
+        <div id="error-message"></div>
         <div class="newEntry">
             <div class="authentication-btn">
                 <span class="submitAuthentication">{{messageButton}}</span>
