--- a/css/login-page.css
+++ b/css/login-page.css
@@ -97,6 +97,11 @@
     display: none;
 }
 
+#error-message{
+    color: red;
+    font-size: 0.6em;
+}
+
 @media screen and (min-width: 640px) {
     .authentication {
         width: 27em;
