Fixed the bDBones - A well deserved beer indeed.

--- a/js/templates/teamMembers.html
+++ b/js/templates/teamMembers.html
@@ -1,7 +1,7 @@
 <div class="developers-page">
     <div class="developers-title">Meet the team</div>
     <div class="developers-box">
-        {{#each item}}
+        {{#each teamDevelopers}}
         <div class="developer-box">
             <img src={{photoLink}}>
             <span>{{name}}</span>
@@ -10,12 +10,12 @@
             <div class="developer-links">
                 <span>
                     <a href={{facebookLink}}>
-                        <img src="url(../../img/facebook-link.jpg">
+                        <img src="url(../../img/Team/facebook-link.jpg">
                     </a>
                 </span>
                 <span>
                     <a href={{githubLink}}>
-                        <img src="url(../../img/github-link.jpg">
+                        <img src="url(../../img/Team/github-link.jpg">
                     </a>
                 </span>
             </div>
