Change the html for the new actor itunes icon

--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -10,12 +10,11 @@
 
             <img id="imgActor" src="{{imgActor}}">
 
-            <a href="{{artistLinkUrl}}">
-                <div class="itunes">
-                    <img class="ilogo" src="url(../../img/itunesLogo.png">
-                    <p id="centre">Apple Store </p>
-                </div>
-            </a>
+             <div class="itunes">
+                 <a href="{{artistLinkUrl}}">
+                    <img class="ilogo" src="url(../../img/itunesLogo2.png">
+                 </a>
+             </div>
         </div>
 
         <div>
