--- a/js/templates/thumbnail.html
+++ b/js/templates/thumbnail.html
@@ -12,15 +12,26 @@
 
 {{else if isUserType}}
 
-<a class="user-box" href="#member/{{id}}">
+<div class="user-box">
     <div class="user-thumbnail">
         <img class="gravatar-photo" data-email="{{email}}" src=""/>
     </div>
     <div class="user-info">
-        <p class="user-name">{{name}}</p>
+        <a href="#member/{{id}}">
+             <p class="user-name">{{name}}</p>
+        </a>
         <p class="user-email">{{email}}</p>
+        {{#if isNotCurrentUser}}
+        <button class="toggle-following btn thumbnail-follower" ref-id="{{userId}}">
+            {{#if isFollowing}}
+            Unfollow
+            {{else}}
+            Follow
+            {{/if }}
+        </button>
+        {{/if }}
     </div>
-</a>
+</div>
 
 {{else}}
 
