adding call error handlers

--- a/js/templates/searchGroup.html
+++ b/js/templates/searchGroup.html
@@ -1,5 +1,6 @@
 <div class="search-results-display">
 
+    <div id="error-message-search"></div>
     <div class="text-researched">Showing Results For : {{searchWord}}</div>
     {{#each group}}
     <h1>{{title}}</h1>
