adding missing call error handlers

--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -6,6 +6,7 @@
     </div>
 
     <div class="information">
+        <div class="error-handling" id="error-message-actor"></div>
         <div class="actor-itunes">
 
             <img id="imgActor" src="{{imgActor}}">
