--- a/js/templates/episode.html
+++ b/js/templates/episode.html
@@ -6,6 +6,7 @@
     <div class="episode-modal-title">
         Episode {{trackNumber}} : {{trackName}}
     </div>
+    <div class="error-handling" id="error-message-episode"></div>
     <div class="episode-modal-season">
         {{collectionName}} - Episode {{trackNumber}}
     </div>
