--- a/js/templates/movie-season.html
+++ b/js/templates/movie-season.html
@@ -9,7 +9,7 @@
 </head>
 
 <class ="page-box">
-    <div id="error-message-movie"></div>
+    <div class="error-handling" id="error-message-movie"></div>
 
     <!-- Title and background image -->
     {{#if isMovieType}}
