--- a/js/templates/user.html
+++ b/js/templates/user.html
@@ -3,6 +3,7 @@
         <div class="user-thumbnail">
             <img class="gravatar-photo" data-email="{{email}}" src=""/>
         </div>
+        <div class="error-handling" id="error-message-user"></div>
 
         <div class="individual-user-box">
             {{#if isNotCurrentUser}}
