--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -2,7 +2,7 @@
     <div class="selection-box">
         <input class="delete-watchlist-checkbox" type="checkbox" value="{{id}}"/>
     </div>
-
+    <div class="error-handling" id="error-message-watchlist"></div>
     <div class="watchlist-aside">
         <div class="watchlist-title-box" data-id="{{id}}">
             <h4 class="watchlist-title">{{name}}</h4>
