adding CSS for red text for error messages

--- a/css/watchlist.css
+++ b/css/watchlist.css
@@ -172,6 +172,10 @@
     border-radius: 4px;
 }
 
+#error-message-watchlist{
+    color: red;
+}
+
 @media (min-width: 960px) {
     .watchlist-section-header {
         margin-top: 4em;
