--- a/css/episode.css
+++ b/css/episode.css
@@ -69,6 +69,10 @@ html{
     margin-top: 1em;
 }
 
+#error-message-episode{
+    color: red;
+}
+
 @media screen and (min-width: 540px) and (max-width: 767px) {
     .Episode-modal {
         margin: 15% 3.7% 5% 3.7%;
