--- a/css/movies-seasons-thumbnail.css
+++ b/css/movies-seasons-thumbnail.css
@@ -83,12 +83,27 @@
     justify-content: space-between;
 }
 
+.movie-watchlist-add, .movie-watchlist-remove, .movie-watchlist-control {
+    display: none;
+}
+
+.special-movie.movie-watchlist-add, .special-movie.movie-watchlist-remove {
+    display:inline-flex;
+}
+
+.special-movie.movie-watchlist-control {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-grow: 1;
+}
+
 @media screen and (min-width: 640px) {
 
-/*}
+    /*}
 
-@media screen and (min-width: 970px) {*/
-
+    @media screen and (min-width: 970px) {*/
     .movies-box:last-of-type {
         border-bottom: none;
     }
