--- a/js/templates/thumbnail.html
+++ b/js/templates/thumbnail.html
@@ -39,6 +39,10 @@
             <p class="{{cssClassType}}-description-text">{{longDescription}}</p>
             <span class="ellipsis">...</span>
         </div>
+        <div class="{{cssClassType}}-watchlist-control">
+            <div class="{{cssClassType}}-watchlist-add">+</div>
+            <div class="{{cssClassType}}-watchlist-remove">-</div>
+        </div>
         <div class="{{cssClassType}}-footer">
             <div class="content-advisory-rating">{{contentAdvisoryRating}}</div>
             <div class="duration">{{convertDuration}}</div>
