--- a/css/user-session.css
+++ b/css/user-session.css
@@ -55,10 +55,13 @@
 
 .user-info {
     min-width: 0;
-
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     color: white;
     margin-top: auto;
     margin-bottom: auto;
+    align-items: center;
 }
 
 content {
@@ -66,7 +69,7 @@ content {
 }
 
 .toggle-following {
-    background-color: green;
+    background-color: #0085FF;
     color: white;
     transition: opacity ease-in-out .25s;
 
@@ -94,6 +97,11 @@ content {
 #user-watchlists h1 {
     text-align: center;
 }
+
+.thumbnail-follower {
+
+}
+
 
 @media screen and (min-width: 640px) {
     .user-box {
