--- a/css/user-session.css
+++ b/css/user-session.css
@@ -14,7 +14,6 @@
     margin: 1em 0;
     display: flex;
     flex-direction: row;
-    /* width: 100%; */
 }
 
 .user-name {
@@ -29,7 +28,6 @@
 .user-details {
     display: flex;
     max-width: 13em;
-    /* margin-left: 1em; */
     margin-right: 4em;
 }
 
@@ -65,6 +63,7 @@ content {
     display: flex;
     align-items: center;
 }
+
 .toggle-following {
     background-color: #0085FF;
     color: white;
@@ -73,8 +72,6 @@ content {
     margin-bottom: 1em;
     font-size: 0.8em;
     text-align: center;
-    /* display: flex; */
-    /* align-items: center; */
     height: 40px;
     width: 6em;
     border: 1px solid white;
@@ -99,8 +96,13 @@ content {
 
 }
 
+@media screen and (min-width: 361px) and (max-width: 640px){
+    .user-details {
+        min-width: 25em;
+    }
+}
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 641px) {
     .user-box {
         display: flex;
         flex-direction: row;
@@ -108,51 +110,51 @@ content {
     }
 
     .user-box {
-        display: flex;
-        flex-direction: row;
-        /* min-width: 0; */
-        /* max-width: 360px; */
-        text-decoration: none;
-    /* display: flex; */
+        justify-content: space-between;
+    }
 
     .toggle-following {
         width: 130px;
     }
 
-}
+    .user-thumbnail {
+        margin-right: 0.5em;
+    }
 
-.user-thumbnail {
-    margin-right: 0.5em;
-}
+    .user-info {
+        max-width: 40em;
+        min-width: 0;
+        justify-content: space-around;
+        color: white;
+        margin-top: auto;
+        margin-bottom: auto;
+        align-items: center;
+    }
 
-.user-info {
-    max-width: 40em;
-    min-width: 0;
-    /* display: flex; */
-    /* flex-direction: row; */
-    justify-content: space-around;
-    color: white;
-    margin-top: auto;
-    margin-bottom: auto;
-    align-items: center;
-}
-}
+    .user-info p{
+        min-width: 18em;
+    }
 
-.user-details {
-    /* display: flex; */
-    /* max-width: 1em; */
-    /* margin-right: 4em; */
-}
+    #members-search-result {
+        width: 43em;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
+    .user-details {
+        min-width: 18em;
+        max-width: 0;
+    }
 
-.user-email {
-    max-width: 14em;
-    margin: 0;
-    white-space: nowrap;
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 11em;
+    .user-email {
+        max-width: 14em;
+        margin: 0;
+        white-space: nowrap;
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 11em;
+    }
 }
 
 @media screen and (min-width: 960px) {
